# legendary-succotash

./: README.md  docs.md  roadmap.md
backend/: Containerfile  archive_files.py  create_user.py  main.py  pyproject.toml
frontend/: Containerfile  README.md  package-lock.json  package.json
frontend/src/lib/: login.svelte.ts  vault.svelte.ts
frontend/src/routes/: +page.svelte
scripts/: archive-files  create-user  deploy  dev-server  stop
